# human-chrono-parser

./: Cargo.toml  README.md
.github/workflows/: Python.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
examples/: extract_all.rs  pt_br.rs
human-chrono-parser/: Cargo.toml
human-chrono-parser/examples/: pt_br.rs
human-chrono-parser/src/: lib.rs
human-chrono-parser/src/locales/: en.rs  mod.rs
src/: lib.rs
src/locales/: mod.rs  pt_br.rs
