[workspace]
resolver = "2"
members = ["./human-chrono-parser", "./bindings/python"]

[workspace.project]
version = "0.0.2"
description = "Parse human-written relative dates like \"today\" ,\"tomorrow\", \"in 3 days\", \"next monday\" and other variants."
readme = "README.md"
authors = ["Erle Carrara <carrara.erle@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ecarrara/human-chrono-parser"
keywords = ["chrono", "date", "nlp", "parser", "human"]

[workspace.dependencies]
chrono = "^0.4"
winnow = "^0.6"
