[package]
name = "human-chrono-parser-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "human_chrono_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["chrono"] }
human-chrono-parser = { path = "../../human-chrono-parser" }
chrono = { workspace = true }
